# rrl

./: CMakeLists.txt  RRL_Tensor.hpp  RRL_core.hpp  ReadMe.md
app/: main.cpp  test_c100.cpp  test_walk.cpp  train_walk.cpp
include/: anymal_challenging.hpp
include/algorithm/: TRPO_gae.hpp
include/algorithm/common/: LearningData.hpp  PerformanceTester.hpp
include/challenging/: IK_c100.hpp  SimpleMLPLayer.hpp
include/challenging/graph/: GraphLoader.hpp
include/common/: RandomNumberGenerator.hpp  VectorHelper.hpp  compatibility.hpp
include/experienceAcquisitor/: Acquisitor.hpp  AcquisitorCommonFunc.hpp  TrajectoryAcquisitor.hpp  TrajectoryAcquisitor_Parallel.hpp  TrajectoryAcquisitor_Sequential.hpp
include/function/common/: ParameterizedFunction.hpp  Policy.hpp  StochasticPolicy.hpp  ValueFunction.hpp
include/function/tensorflow/: StochasticPolicy_TensorFlow.hpp  ValueFunction_TensorFlow.hpp
include/function/tensorflow/common/: ParameterizedFunction_TensorFlow.hpp  TensorFlowNeuralNetwork.hpp
include/function/tensorflow/pythonProtobufGenerators/: protobufGenerator.py  run_python_scripts.sh
include/hwangbo/: SimpleMLPLayer.hpp  anymal.hpp  anymal_minimal.hpp  anymal_minimal1.hpp
include/memory/: ReplayMemoryS.hpp  ReplayMemorySARS.hpp  Trajectory.hpp
include/noiseModel/: NoNoise.hpp  Noise.hpp  NormalDistributionNoise.hpp
include/tasks/common/: Task.hpp
other/: StochasticPolicy_TensorFlow.hpp  ValueFunction_TensorFlow.hpp
other/common/: ParameterizedFunction_TensorFlow.hpp  TensorFlowNeuralNetwork.hpp
rsc/robot/c100/urdf/: anymal_minimal1.urdf
